# cps2021

./: CMakeLists.txt  README.md  package.xml
launch/: qualifying.launch  test.launch  uav_rover.launch
models/exocam/: model.config  model.sdf
models/logo/: model.config  model.sdf
models/logo/materials/scripts/: logo.material
models/probe/: model.config  model.sdf
models/ring/: model.config  model.sdf
models/ring/meshes/: ring.dae
scripts/: Qualifying_round.py  detectUAV.py  phase1.py  qualifying_round.py  test_solution.py
worlds/: qualifying.world
